--- a/linefit_ground_segmentation/linefit_ground_segmentation_ros/CMakeLists.txt
+++ b/linefit_ground_segmentation/linefit_ground_segmentation_ros/CMakeLists.txt
@@ -26,4 +26,4 @@ cs_export()
 # QTCREATOR #
 #############
 FILE(GLOB_RECURSE LibFiles "include/*")
-add_custom_target(headers SOURCES ${LibFiles})
+# add_custom_target(headers SOURCES ${LibFiles})
