add： set(CMAKE_CXX_STANDARD 14)

--- a/linefit_ground_segmentation/linefit_ground_segmentation_ros/CMakeLists.txt
+++ b/linefit_ground_segmentation/linefit_ground_segmentation_ros/CMakeLists.txt
@@ -7,8 +7,9 @@ catkin_simple(ALL_DEPS_REQUIRED)
 find_library(GLOG_PATH glog)
 
 add_definitions(-std=c++11 -g)
+set(CMAKE_CXX_STANDARD 14)
 
-find_package(PCL REQUIRED)
+find_package(PCL 1.8 REQUIRED)
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
