--- a/linefit_ground_segmentation/linefit_ground_segmentation/CMakeLists.txt
+++ b/linefit_ground_segmentation/linefit_ground_segmentation/CMakeLists.txt
@@ -8,7 +8,7 @@ catkin_simple(ALL_DEPS_REQUIRED)
 add_definitions(-std=c++11 -g)
 set(CMAKE_CXX_STANDARD 14)
 
-find_package(PCL 1.8 REQUIRED)
+find_package(PCL REQUIRED)
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
